--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <h2>MYSTERY CARD SPIN</h2>
     <div class="card-grid" id="cardGrid"></div>
     <div class="inputgroup">
-      <input type="text" id="inputId" placeholder="Masukkan ID" autocomplete="off">
-      <input type="text" id="inputToken" placeholder="Masukkan Token" autocomplete="off">
+      <div class="inputrow">
+        <input type="text" id="inputId" placeholder="Masukkan ID" autocomplete="off">
+        <input type="text" id="inputToken" placeholder="Masukkan Token" autocomplete="off">
+      </div>
       <button class="spin-btn" id="btnSpin" disabled>SPIN</button>
     </div>
     <div class="desc" id="desc">Isi ID dan Token, lalu tekan SPIN untuk mengacak kartu!</div>
