--- a/index.html
+++ b/index.html
@@ -5,22 +5,678 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>MYSTERY CARD SPIN</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background: radial-gradient(circle at 50% 55%, #38b6ff 0%, #0a2342 40%, #010a1a 80%),
+        repeating-conic-gradient(from 0deg, #38b6ff33 0deg 10deg, transparent 10deg 20deg),
+        linear-gradient(120deg, #0a2342 0%, #010a1a 100%);
+      background-blend-mode: lighten, screen, normal;
+      color: #eaf3fa;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      min-height: 100vh;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 0 12px;
+      position: relative;
+      overflow-x: hidden;
+    }
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 0;
+      pointer-events: none;
+      background: repeating-conic-gradient(from 0deg, #38b6ff55 0deg 6deg, transparent 6deg 18deg);
+      opacity: 0.18;
+      filter: blur(2px);
+    }
+    .main-area {
+      width: 90vw;
+      max-width: 1200px;
+      min-width: 320px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 2vw 0 3vw 0;
+      box-sizing: border-box;
+      z-index: 1;
+    }
+    h2 {
+      font-size: clamp(2rem, 4vw, 3.5rem);
+      margin: clamp(24px, 4vw, 64px) 0 clamp(18px, 2vw, 36px) 0;
+    }
+    .card-row {
+      display: flex;
+      gap: clamp(16px, 4vw, 64px);
+      justify-content: center;
+      align-items: end;
+      margin-bottom: clamp(10px, 2vw, 32px);
+      margin-top: clamp(8px, 2vw, 24px);
+      z-index: 1;
+    }
+    .card-outer {
+      perspective: 1400px;
+      width: clamp(60px, 15vw, 200px);
+      height: clamp(90px, 22vw, 300px);
+      position: relative;
+      transition: transform 0.18s cubic-bezier(.4,2,.6,1);
+    }
+    .card-outer:hover { transform: scale(1.07) translateY(-8px); }
+    .card {
+      width: 100%;
+      height: 100%;
+      border-radius: 22px;
+      box-shadow: 0 8px 40px #3a506b99, 0 2px 12px #c7e0f755;
+      background: #23272f;
+      border: 4px solid #c7e0f7;
+      transition: box-shadow 0.22s, border 0.22s, transform 0.2s;
+      cursor: pointer;
+      position: relative;
+      transform-style: preserve-3d;
+      overflow: hidden;
+    }
+    .card.selected {
+      border: 4px solid #fff;
+      box-shadow: 0 0 60px #c7e0f7cc, 0 4px 24px #3a506bcc;
+      z-index: 2;
+      transform: scale(1.13);
+    }
+    .card.flipped {
+      transform: rotateY(180deg) scale(1.13);
+      cursor: default;
+      pointer-events: none;
+    }
+    .card .face, .card .back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      backface-visibility: hidden;
+      border-radius: inherit;
+      font-size: 44px;
+      transition: background 0.18s;
+    }
+    .card .face {
+      background: linear-gradient(120deg, #23272f 60%, #c7e0f733 100%);
+      box-shadow: 0 2px 12px #c7e0f733;
+    }
+    .card .back {
+      background: linear-gradient(120deg, #f6fafd 90%, #c7e0f7 100%);
+      color: #3a506b;
+      transform: rotateY(180deg);
+      font-size: 22px;
+      flex-direction: column;
+      font-weight: 800;
+      letter-spacing: 1.2px;
+      padding: 0 8px;
+      text-align: center;
+      box-shadow: 0 2px 16px #c7e0f755;
+    }
+    .card-anim {
+      animation: cardSpin 0.18s linear infinite;
+    }
+    @keyframes cardSpin {
+      0% { transform: rotateY(0); }
+      100% { transform: rotateY(360deg); }
+    }
+    .inputgroup {
+      margin: 18px 0 0 0;
+      width: 100%;
+      max-width: 440px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: clamp(8px, 2vw, 18px);
+      z-index: 1;
+    }
+    .inputrow {
+      display: flex;
+      gap: clamp(6px, 2vw, 18px);
+      margin-bottom: clamp(8px, 2vw, 18px);
+      width: 100%;
+      max-width: 600px;
+    }
+    .inputrow input {
+      background: #23272f;
+      color: #c7e0f7;
+      border: 2.5px solid #c7e0f7cc;
+      border-radius: 10px;
+      width: 100%;
+      max-width: 210px;
+      padding: clamp(8px, 1vw, 18px) clamp(10px, 2vw, 24px);
+      font-size: clamp(14px, 2vw, 22px);
+      outline: none;
+      transition: border .18s, box-shadow .18s;
+      font-weight: 600;
+      box-shadow: 0 2px 10px #c7e0f722;
+      letter-spacing: 1px;
+    }
+    .inputrow input:focus {
+      border: 2.5px solid #fff;
+      box-shadow: 0 0 12px #c7e0f777;
+      background: #232b3a;
+    }
+    .spin-btn {
+      background: linear-gradient(90deg, #fff 0%, #c7e0f7 40%, #3a506b 130%);
+      color: #23272f;
+      border: none;
+      font-size: clamp(16px, 2vw, 28px);
+      font-weight: 900;
+      border-radius: 12px;
+      padding: clamp(10px, 1vw, 20px) clamp(24px, 4vw, 64px);
+      margin: 10px auto 0 auto;
+      cursor: pointer;
+      box-shadow: 0 2px 18px #c7e0f74b;
+      transition: background .12s, opacity .16s, box-shadow .18s, color .18s;
+      letter-spacing: 1.3px;
+      opacity: .7;
+      outline: none;
+      width: 100%;
+      max-width: 400px;
+      display: block;
+      text-shadow: 0 1px 0 #fff8;
+    }
+    .spin-btn.active {
+      opacity: 1;
+      pointer-events: auto;
+      box-shadow: 0 0 24px #c7e0f7cc;
+      color: #3a506b;
+      background: linear-gradient(90deg, #fff 0%, #c7e0f7 60%, #3a506b 130%);
+    }
+    .spin-btn:active {
+      background: #fff;
+      color: #3a506b;
+    }
+    .desc {
+      font-size: clamp(14px, 2vw, 22px);
+      margin-top: clamp(10px, 2vw, 24px);
+      color: #eaf3fa;
+      text-align: center;
+      text-shadow: 0 1px 0 #000a, 0 0 8px #c7e0f777;
+      font-weight: 600;
+      max-width: 440px;
+      margin-left: auto;
+      margin-right: auto;
+      z-index: 1;
+    }
+    .msg {
+      font-size: 23px;
+      color: #c7e0f7;
+      margin: 18px 0 0 0;
+      font-weight: 900;
+      text-align: center;
+      text-shadow: 0 2px 12px #3a506bcc, 0 0 8px #fff8;
+      min-height: 32px;
+      max-width: 440px;
+      margin-left: auto;
+      margin-right: auto;
+      z-index: 1;
+      letter-spacing: 1.2px;
+    }
+    .msg span {
+      font-size: 1.1em;
+      font-weight: 900;
+      padding: 2px 10px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px #fff8;
+      background: #fffbe6;
+    }
+    .msg span[style*="#ffdc00"] {
+      color: #fff;
+      background: #ffb800;
+      border: 2px solid #b88a00;
+      text-shadow: 0 2px 8px #b88a00, 0 0 2px #000, 0 0 1px #fff;
+      box-shadow: 0 2px 16px #ffdc0099;
+      font-weight: 900;
+    }
+    .msg span[style*="#ff3a3a"] {
+      color: #fff;
+      background: linear-gradient(90deg,#ff3a3a 60%,#b80000 100%);
+      box-shadow: 0 2px 16px #ff3a3a99;
+      text-shadow: 0 2px 8px #b80000, 0 0 2px #fff, 0 0 1px #000;
+      border: 2px solid #b80000;
+    }
+    .msg span[style*="BONUS"],
+    .msg span[style*="bonus"],
+    .msg span[style*="#ff7b00"] {
+      color: #fff;
+      background: linear-gradient(90deg,#ff7b00 60%,#b85c00 100%);
+      box-shadow: 0 2px 16px #ff7b0099;
+      text-shadow: 0 2px 8px #b85c00, 0 0 2px #fff, 0 0 1px #000;
+      border: 2px solid #b85c00;
+    }
+    .msg span {
+      /* fallback: jika tidak kena selector di atas, tetap jelas */
+      color: #23272f;
+      background: #fffbe6;
+      border: 2px solid #c7e0f7;
+      text-shadow: 0 1px 0 #fff, 0 0 2px #c7e0f7;
+    }
+    .card .face img,
+    .card .back img {
+      width: 100%;
+      height: 100%;
+      max-width: none;
+      max-height: none;
+      object-fit: contain;
+      display: block;
+      margin: 0 auto;
+      filter: drop-shadow(0 2px 12px #c7e0f799);
+    }
+    .card .back img {
+      margin-bottom: 10px;
+    }
+    @media (max-width: 600px) {
+      .main-area {
+        width: 99vw;
+        padding: 2vw 0 3vw 0;
+      }
+      .card-row {
+        gap: 5vw;
+      }
+      .card-outer {
+        width: 21vw;
+        height: 33vw;
+      }
+      .inputgroup, .inputrow, .desc, .msg {
+        max-width: 99vw;
+      }
+      h2 {
+        font-size: 6vw;
+      }
+      .spin-btn {
+        max-width: 99vw;
+      }
+      .inputrow input {
+        max-width: 100%;
+      }
+    }
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap');
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+body {
+  background: radial-gradient(circle at 50% 55%, #38b6ff 0%, #0a2342 40%, #010a1a 80%),
+    repeating-conic-gradient(from 0deg, #38b6ff33 0deg 10deg, transparent 10deg 20deg),
+    linear-gradient(120deg, #0a2342 0%, #010a1a 100%);
+  background-blend-mode: lighten, screen, normal;
+  color: #eaf3fa;
+  font-family: 'Montserrat', Arial, sans-serif;
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0 12px;
+  position: relative;
+  overflow-x: hidden;
+}
+.main-area {
+  width: 100%;
+  max-width: 1200px;
+  min-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 0 12px 0;
+  box-sizing: border-box;
+  z-index: 1;
+  overflow-x: hidden;
+}
+h2 {
+  font-family: 'Montserrat', Arial, sans-serif;
+  font-size: clamp(2.5rem, 6vw, 4rem);
+  margin: clamp(24px, 4vw, 64px) 0 clamp(18px, 2vw, 36px) 0;
+  letter-spacing: 2px;
+  text-shadow: 0 2px 24px #38b6ff99, 0 0 8px #010a1a;
+}
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 32px;
+  margin-bottom: 32px;
+  margin-top: 18px;
+  z-index: 1;
+  justify-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.card-outer {
+  perspective: 1200px;
+  width: 120px;
+  height: 180px;
+  position: relative;
+  transition: transform 0.18s cubic-bezier(.4,2,.6,1);
+}
+.card-outer:hover { transform: scale(1.07) translateY(-8px); }
+.card {
+  width: 100%;
+  height: 100%;
+  border-radius: 18px;
+  box-shadow: 0 8px 32px #38b6ff33, 0 2px 8px #c7e0f755;
+  background: #23272f;
+  border: 3px solid #38b6ff;
+  transition: box-shadow 0.22s, border 0.22s, transform 0.2s;
+  cursor: pointer;
+  position: relative;
+  transform-style: preserve-3d;
+  overflow: hidden;
+}
+.card.selected {
+  border: 3px solid #fff;
+  box-shadow: 0 0 32px #38b6ffcc, 0 4px 16px #3a506bcc;
+  z-index: 2;
+  transform: scale(1.12);
+}
+.card.flipped {
+  transform: rotateY(180deg) scale(1.12);
+  cursor: default;
+  pointer-events: none;
+}
+.card .face img,
+.face img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
+  filter: drop-shadow(0 2px 8px #38b6ff99);
+}
+.card .back img {
+  margin-bottom: 8px;
+}
+.card .face, .card .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backface-visibility: hidden;
+  border-radius: inherit;
+  font-size: 32px;
+  transition: background 0.18s;
+}
+.card .face {
+  background: linear-gradient(120deg, #23272f 60%, #38b6ff33 100%);
+  box-shadow: 0 2px 8px #38b6ff33;
+}
+.card .back {
+  background: linear-gradient(120deg, #f6fafd 90%, #38b6ff 100%);
+  color: #3a506b;
+  transform: rotateY(180deg);
+  font-size: 18px;
+  font-weight: 900;
+  letter-spacing: 1.1px;
+  padding: 0 6px;
+  text-align: center;
+  box-shadow: 0 2px 12px #38b6ff55;
+}
+.card-anim {
+  animation: cardSpin 0.18s linear infinite;
+}
+@keyframes cardSpin {
+  0% { transform: rotateY(0); }
+  100% { transform: rotateY(360deg); }
+}
+.inputgroup {
+  margin: 18px 0 0 0;
+  width: 100%;
+  max-width: 340px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  z-index: 1;
+}
+.inputrow {
+  display: flex;
+  flex-direction: row;
+  gap: 18px;
+  width: 100%;
+  justify-content: center;
+  margin-bottom: 6px;
+}
+.inputrow input {
+  background: #23272f;
+  color: #eaf3fa;
+  border: 2px solid #38b6ffcc;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 150px;
+  padding: 10px 18px;
+  font-size: 16px;
+  outline: none;
+  transition: border .18s, box-shadow .18s;
+  font-weight: 600;
+  box-shadow: 0 2px 8px #38b6ff22;
+  letter-spacing: 1px;
+}
+.inputrow input:focus {
+  border: 2px solid #fff;
+  box-shadow: 0 0 8px #38b6ff77;
+  background: #232b3a;
+}
+.spin-btn {
+  background: linear-gradient(90deg, #38b6ff 0%, #fff 100%);
+  color: #23272f;
+  font-size: 18px;
+  font-weight: 900;
+  border-radius: 10px;
+  box-shadow: 0 2px 12px #38b6ff4b, 0 0 16px #38b6ff99;
+  padding: 12px 32px;
+  margin: 10px auto 0 auto;
+  cursor: pointer;
+  transition: background .12s, opacity .16s, box-shadow .18s, color .18s;
+  letter-spacing: 1.1px;
+  opacity: .7;
+  outline: none;
+  width: 100%;
+  max-width: 220px;
+  display: block;
+  text-shadow: 0 1px 0 #fff8;
+}
+.spin-btn.active {
+  opacity: 1;
+  pointer-events: auto;
+  box-shadow: 0 0 16px #38b6ffcc;
+  color: #23272f;
+  background: linear-gradient(90deg, #38b6ff 0%, #fff 100%);
+}
+.claim-btn {
+  background: linear-gradient(90deg, #ff7b00 0%, #ffdc00 100%);
+  color: #23272f;
+  font-size: 18px;
+  font-weight: 900;
+  border-radius: 10px;
+  box-shadow: 0 2px 12px #ffdc004b, 0 0 16px #ffdc0099;
+  padding: 12px 32px;
+  margin: 18px auto 0 auto;
+  cursor: pointer;
+  transition: background .12s, opacity .16s, box-shadow .18s, color .18s;
+  letter-spacing: 1.1px;
+  outline: none;
+  width: 100%;
+  max-width: 220px;
+  display: block;
+  text-shadow: 0 1px 0 #fff8;
+}
+.claim-btn:active {
+  background: #fffbe6;
+  color: #ff7b00;
+}
+.desc {
+  font-size: 16px;
+  font-weight: 700;
+  margin-top: 16px;
+  color: #eaf3fa;
+  text-align: center;
+  text-shadow: 0 1px 0 #000a, 0 0 8px #38b6ff77;
+  max-width: 340px;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1;
+}
+.msg {
+  font-size: 18px;
+  color: #38b6ff;
+  font-weight: 900;
+  text-shadow: 0 2px 8px #38b6ffcc, 0 0 4px #fff8;
+  margin: 18px 0 0 0;
+  text-align: center;
+  min-height: 28px;
+  max-width: 340px;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1;
+  letter-spacing: 1px;
+}
+.face img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+.menu-bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background: #1a1a1a;
+      padding: 12px 32px;
+      color: #fff;
+      font-weight: bold;
+      font-size: 1.2rem;
+      box-shadow: 0 2px 12px #ff003366;
+    }
+    .logo {
+      font-size: 1.6rem;
+      color: #ff0033;
+      font-weight: 900;
+      letter-spacing: 2px;
+      text-shadow: 0 0 8px #ff0033, 0 2px 12px #000;
+    }
+    .menu-items {
+      display: flex;
+      gap: 24px;
+    }
+    .menu-item {
+      cursor: pointer;
+      padding: 8px 18px;
+      border-radius: 6px;
+      background: none;
+      color: #fff;
+      font-weight: 700;
+      transition: background 0.2s;
+    }
+    .menu-item:hover {
+      background: #ff0033;
+      color: #fff;
+      box-shadow: 0 0 8px #ff0033;
+    }
+    .burger {
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      cursor: pointer;
+    }
+    .burger span {
+      width: 28px;
+      height: 4px;
+      background: #ff0033;
+      border-radius: 2px;
+      display: block;
+    }
+    @media (max-width: 700px) {
+      .menu-items {
+        display: none;
+      }
+      .burger {
+        display: flex;
+      }
+    }
+  </style>
 </head>
 <body>
+  <nav class="menu-bar">
+    <span class="logo">SLOT MERAH HITAM</span>
+    <div class="menu-items">
+      <span class="menu-item">Home</span>
+      <span class="menu-item">Register</span>
+      <span class="menu-item">Deposit</span>
+      <span class="menu-item hide-mobile">Promo</span>
+      <span class="menu-item hide-mobile">Livechat</span>
+    </div>
+    <div class="burger" id="burgerBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </nav>
   <div class="main-area">
     <h2>MYSTERY CARD SPIN</h2>
-    <div class="card-grid" id="cardGrid"></div>
+    <div class="card-row" id="cardGrid"></div>
     <div class="inputgroup">
       <div class="inputrow">
         <input type="text" id="inputId" placeholder="Masukkan ID" autocomplete="off">
-        <input type="text" id="inputToken" placeholder="Masukkan Token" autocomplete="off">
+        <input type="text" id="inputToken" placeholder="Kode SPIN" autocomplete="off">
       </div>
       <button class="spin-btn" id="btnSpin" disabled>SPIN</button>
+      <button class="spin-btn" id="btnClaim" style="display:none;margin-top:12px;">CLAIM SEKARANG</button>
     </div>
     <div class="desc" id="desc">Isi ID dan Token, lalu tekan SPIN untuk mengacak kartu!</div>
     <div class="msg" id="msg"></div>
-    <button class="claim-btn" id="btnClaim" style="display:none">CLAIM SEKARANG</button>
   </div>
+  <audio id="spinSound" src="https://files.catbox.moe/mnuhkf.wav" preload="auto"></audio>
+  <audio id="zonkSound" src="https://files.catbox.moe/d6lzvw.wav" preload="auto"></audio>
   <script src="script.js"></script>
+  <script>
+    // Burger menu toggle
+    const burgerBtn = document.getElementById('burgerBtn');
+    const menuItems = document.querySelector('.menu-items');
+    burgerBtn.addEventListener('click', () => {
+      menuItems.style.display = menuItems.style.display === 'flex' ? 'none' : 'flex';
+      menuItems.style.flexDirection = 'column';
+      menuItems.style.position = 'absolute';
+      menuItems.style.top = '56px';
+      menuItems.style.right = '16px';
+      menuItems.style.background = '#1a1a1a';
+      menuItems.style.padding = '16px';
+      menuItems.style.borderRadius = '8px';
+      menuItems.style.boxShadow = '0 2px 12px #ff003366';
+      menuItems.style.zIndex = '99';
+    });
+    window.addEventListener('resize', () => {
+      if(window.innerWidth > 700) {
+        menuItems.style.display = 'flex';
+        menuItems.style.position = 'static';
+        menuItems.style.flexDirection = 'row';
+        menuItems.style.background = 'none';
+        menuItems.style.padding = '0';
+        menuItems.style.borderRadius = '0';
+        menuItems.style.boxShadow = 'none';
+      } else {
+        menuItems.style.display = 'none';
+      }
+    });
+  </script>
 </body>
 </html>
