--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
         repeating-conic-gradient(from 0deg, #38b6ff33 0deg 10deg, transparent 10deg 20deg),
         linear-gradient(120deg, #0a2342 0%, #010a1a 100%);
       background-blend-mode: lighten, screen, normal;
+      background-attachment: fixed; /* Penting: background tetap fixed */
+      background-size: 100% 100%; /* Cover seluruh viewport */
       color: #eaf3fa;
-      font-family: 'Segoe UI', Arial, sans-serif;
+      font-family: 'Montserrat', Arial, sans-serif;
       min-height: 100vh;
       margin: 0;
+      padding: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      padding: 0 12px;
       position: relative;
       overflow-x: hidden;
     }
@@ -42,9 +44,10 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 2vw 0 3vw 0;
+      padding: 20px 12px 40px 12px; /* Padding yang konsisten */
       box-sizing: border-box;
       z-index: 1;
+      position: relative;
     }
     h2 {
       font-size: clamp(2rem, 4vw, 3.5rem);
@@ -310,262 +313,11 @@
       }
     }
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap');
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-body {
-  background: radial-gradient(circle at 50% 55%, #38b6ff 0%, #0a2342 40%, #010a1a 80%),
-    repeating-conic-gradient(from 0deg, #38b6ff33 0deg 10deg, transparent 10deg 20deg),
-    linear-gradient(120deg, #0a2342 0%, #010a1a 100%);
-  background-blend-mode: lighten, screen, normal;
-  color: #eaf3fa;
-  font-family: 'Montserrat', Arial, sans-serif;
-  min-height: 100vh;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 0 12px;
-  position: relative;
-  overflow-x: hidden;
-}
-.main-area {
-  width: 100%;
-  max-width: 1200px;
-  min-width: 320px;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 8px 0 12px 0;
-  box-sizing: border-box;
-  z-index: 1;
-  overflow-x: hidden;
-}
-h2 {
-  font-family: 'Montserrat', Arial, sans-serif;
-  font-size: clamp(2.5rem, 6vw, 4rem);
-  margin: clamp(24px, 4vw, 64px) 0 clamp(18px, 2vw, 36px) 0;
-  letter-spacing: 2px;
-  text-shadow: 0 2px 24px #38b6ff99, 0 0 8px #010a1a;
-}
-.card-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 32px;
-  margin-bottom: 32px;
-  margin-top: 18px;
-  z-index: 1;
-  justify-items: center;
-  justify-content: center;
-  width: 100%;
-  max-width: 480px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.card-outer {
-  perspective: 1200px;
-  width: 120px;
-  height: 180px;
-  position: relative;
-  transition: transform 0.18s cubic-bezier(.4,2,.6,1);
-}
-.card-outer:hover { transform: scale(1.07) translateY(-8px); }
-.card {
-  width: 100%;
-  height: 100%;
-  border-radius: 18px;
-  box-shadow: 0 8px 32px #38b6ff33, 0 2px 8px #c7e0f755;
-  background: #23272f;
-  border: 3px solid #38b6ff;
-  transition: box-shadow 0.22s, border 0.22s, transform 0.2s;
-  cursor: pointer;
-  position: relative;
-  transform-style: preserve-3d;
-  overflow: hidden;
-}
-.card.selected {
-  border: 3px solid #fff;
-  box-shadow: 0 0 32px #38b6ffcc, 0 4px 16px #3a506bcc;
-  z-index: 2;
-  transform: scale(1.12);
-}
-.card.flipped {
-  transform: rotateY(180deg) scale(1.12);
-  cursor: default;
-  pointer-events: none;
-}
-.card .face img,
-.face img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  display: block;
-  margin: 0 auto;
-  filter: drop-shadow(0 2px 8px #38b6ff99);
-}
-.card .back img {
-  margin-bottom: 8px;
-}
-.card .face, .card .back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  backface-visibility: hidden;
-  border-radius: inherit;
-  font-size: 32px;
-  transition: background 0.18s;
-}
-.card .face {
-  background: linear-gradient(120deg, #23272f 60%, #38b6ff33 100%);
-  box-shadow: 0 2px 8px #38b6ff33;
-}
-.card .back {
-  background: linear-gradient(120deg, #f6fafd 90%, #38b6ff 100%);
-  color: #3a506b;
-  transform: rotateY(180deg);
-  font-size: 18px;
-  font-weight: 900;
-  letter-spacing: 1.1px;
-  padding: 0 6px;
-  text-align: center;
-  box-shadow: 0 2px 12px #38b6ff55;
-}
-.card-anim {
-  animation: cardSpin 0.18s linear infinite;
-}
-@keyframes cardSpin {
-  0% { transform: rotateY(0); }
-  100% { transform: rotateY(360deg); }
-}
-.inputgroup {
-  margin: 18px 0 0 0;
-  width: 100%;
-  max-width: 340px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 12px;
-  z-index: 1;
-}
-.inputrow {
-  display: flex;
-  flex-direction: row;
-  gap: 18px;
-  width: 100%;
-  justify-content: center;
-  margin-bottom: 6px;
-}
-.inputrow input {
-  background: #23272f;
-  color: #eaf3fa;
-  border: 2px solid #38b6ffcc;
-  border-radius: 8px;
-  width: 100%;
-  max-width: 150px;
-  padding: 10px 18px;
-  font-size: 16px;
-  outline: none;
-  transition: border .18s, box-shadow .18s;
-  font-weight: 600;
-  box-shadow: 0 2px 8px #38b6ff22;
-  letter-spacing: 1px;
-}
-.inputrow input:focus {
-  border: 2px solid #fff;
-  box-shadow: 0 0 8px #38b6ff77;
-  background: #232b3a;
-}
-.spin-btn {
-  background: linear-gradient(90deg, #38b6ff 0%, #fff 100%);
-  color: #23272f;
-  font-size: 18px;
-  font-weight: 900;
-  border-radius: 10px;
-  box-shadow: 0 2px 12px #38b6ff4b, 0 0 16px #38b6ff99;
-  padding: 12px 32px;
-  margin: 10px auto 0 auto;
-  cursor: pointer;
-  transition: background .12s, opacity .16s, box-shadow .18s, color .18s;
-  letter-spacing: 1.1px;
-  opacity: .7;
-  outline: none;
-  width: 100%;
-  max-width: 220px;
-  display: block;
-  text-shadow: 0 1px 0 #fff8;
-}
-.spin-btn.active {
-  opacity: 1;
-  pointer-events: auto;
-  box-shadow: 0 0 16px #38b6ffcc;
-  color: #23272f;
-  background: linear-gradient(90deg, #38b6ff 0%, #fff 100%);
-}
-.claim-btn {
-  background: linear-gradient(90deg, #ff7b00 0%, #ffdc00 100%);
-  color: #23272f;
-  font-size: 18px;
-  font-weight: 900;
-  border-radius: 10px;
-  box-shadow: 0 2px 12px #ffdc004b, 0 0 16px #ffdc0099;
-  padding: 12px 32px;
-  margin: 18px auto 0 auto;
-  cursor: pointer;
-  transition: background .12s, opacity .16s, box-shadow .18s, color .18s;
-  letter-spacing: 1.1px;
-  outline: none;
-  width: 100%;
-  max-width: 220px;
-  display: block;
-  text-shadow: 0 1px 0 #fff8;
-}
-.claim-btn:active {
-  background: #fffbe6;
-  color: #ff7b00;
-}
-.desc {
-  font-size: 16px;
-  font-weight: 700;
-  margin-top: 16px;
-  color: #eaf3fa;
-  text-align: center;
-  text-shadow: 0 1px 0 #000a, 0 0 8px #38b6ff77;
-  max-width: 340px;
-  margin-left: auto;
-  margin-right: auto;
-  z-index: 1;
-}
-.msg {
-  font-size: 18px;
-  color: #38b6ff;
-  font-weight: 900;
-  text-shadow: 0 2px 8px #38b6ffcc, 0 0 4px #fff8;
-  margin: 18px 0 0 0;
-  text-align: center;
-  min-height: 28px;
-  max-width: 340px;
-  margin-left: auto;
-  margin-right: auto;
-  z-index: 1;
-  letter-spacing: 1px;
-}
-.face img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-}
-.menu-bar {
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+    /* Hapus semua CSS duplikat - gunakan hanya yang di bagian atas */
+    .menu-bar {
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -653,6 +405,19 @@ h2 {
     </div>
     <div class="desc" id="desc">Isi ID dan Token, lalu tekan SPIN untuk mengacak kartu!</div>
     <div class="msg" id="msg"></div>
+    
+    <!-- Footer untuk mengisi area kosong -->
+    <div style="margin-top: 40px; text-align: center; color: #38b6ff; font-size: 14px; opacity: 0.8;">
+      <div style="width: 200px; height: 1px; background: linear-gradient(90deg, transparent, #38b6ff, transparent); margin: 0 auto 15px;"></div>
+      <div>MYSTERY CARD SPIN • LEGEND WINS</div>
+      <div style="display: flex; justify-content: center; gap: 15px; margin-top: 15px;">
+        <div style="width: 6px; height: 6px; border-radius: 50%; background: #38b6ff; opacity: 0.6;"></div>
+        <div style="width: 6px; height: 6px; border-radius: 50%; background: #38b6ff; opacity: 0.8;"></div>
+        <div style="width: 6px; height: 6px; border-radius: 50%; background: #38b6ff; opacity: 1;"></div>
+        <div style="width: 6px; height: 6px; border-radius: 50%; background: #38b6ff; opacity: 0.8;"></div>
+        <div style="width: 6px; height: 6px; border-radius: 50%; background: #38b6ff; opacity: 0.6;"></div>
+      </div>
+    </div>
   </div>
   <audio id="spinSound" src="https://files.catbox.moe/mnuhkf.wav" preload="auto"></audio>
   <audio id="zonkSound" src="https://files.catbox.moe/d6lzvw.wav" preload="auto"></audio>
