--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
   <title>MYSTERY CARD SPIN</title>
   <link rel="stylesheet" href="style.css">
   <style>
+    /* GLOBAL RESET - HILANGKAN SCROLL HORIZONTAL */
+    * {
+      max-width: 100vw !important;
+      overflow-x: hidden !important;
+      box-sizing: border-box !important;
+    }
     html {
-      overflow-x: hidden;
+      overflow-x: hidden !important;
       scroll-behavior: smooth;
+      max-width: 100vw;
     }
     body {
       background: radial-gradient(circle at 50% 55%, #38b6ff 0%, #0a2342 40%, #010a1a 80%),
@@ -27,8 +34,9 @@
       align-items: center;
       justify-content: flex-start;
       position: relative;
-      overflow-x: hidden;
-      width: 100%;
+      overflow-x: hidden !important;
+      width: 100vw;
+      max-width: 100vw;
     }
     body::before {
       content: '';
@@ -41,7 +49,7 @@
       filter: blur(2px);
     }
     .main-area {
-      width: 100%;
+      width: calc(100vw - 20px);
       max-width: 1200px;
       min-width: 320px;
       margin: 0 auto;
@@ -49,7 +57,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 20px 12px 40px 12px; /* Padding yang konsisten */
+      padding: 20px 10px 40px 10px; /* Padding yang konsisten */
       box-sizing: border-box;
       z-index: 1;
       position: relative;
@@ -70,9 +78,11 @@
       margin-top: clamp(8px, 2vw, 24px);
       z-index: 1;
       width: 100%;
-      max-width: 600px;
+      max-width: 580px;
       margin-left: auto;
       margin-right: auto;
+      overflow-x: hidden;
+      box-sizing: border-box;
     }
     .card-outer {
       perspective: 1400px;
@@ -331,9 +341,27 @@
       margin: 0;
       padding: 0;
     }
+    /* PENTING: Hilangkan scroll horizontal sepenuhnya */
+    html {
+      overflow-x: hidden !important;
+      max-width: 100vw !important;
+    }
+    body {
+      overflow-x: hidden !important;
+      max-width: 100vw !important;
+    }
+    .main-area, .card-grid, .inputgroup, .inputrow {
+      overflow-x: hidden !important;
+      max-width: 100vw !important;
+    }
     html, body {
-      max-width: 100%;
-      overflow-x: hidden;
+      max-width: 100vw !important;
+      overflow-x: hidden !important;
+      box-sizing: border-box;
+    }
+    * {
+      max-width: 100vw;
+      box-sizing: border-box;
     }
     /* Hapus scroll bar duplikat */
     ::-webkit-scrollbar {
@@ -355,16 +383,18 @@
       align-items: center;
       justify-content: space-between;
       background: #1a1a1a;
-      padding: 12px 32px;
+      padding: 12px 20px;
       color: #fff;
       font-weight: bold;
       font-size: 1.2rem;
       box-shadow: 0 2px 12px #ff003366;
-      width: 100%;
+      width: 100vw;
+      max-width: 100vw;
       box-sizing: border-box;
       position: sticky;
       top: 0;
       z-index: 100;
+      overflow-x: hidden;
     }
     .logo {
       font-size: 1.6rem;
