--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
       width: auto;
       padding: 0;
       margin: 0 auto;
+      min-width: 420px;
+      min-height: 320px;
+      /* Tambah sedikit lebar dan tinggi agar grid lebih lega */
     }
     
     .card-grid {
@@ -571,6 +574,9 @@
       width: auto;
       padding: 0;
       margin: 0 auto;
+      min-width: 420px;
+      min-height: 320px;
+      /* Tambah sedikit lebar dan tinggi agar grid lebih lega */
     }
     
     /* Controls Section */
