--- a/index.html
+++ b/index.html
@@ -195,7 +195,9 @@
       margin: 0 auto;
       z-index: 1;
       width: auto;
-      max-width: none;
+      max-width: 900px;
+      min-width: 820px;
+      min-height: 600px;
       overflow: visible !important;
     }
     
