--- a/index.html
+++ b/index.html
@@ -561,11 +561,12 @@
       grid-template-columns: 1fr;
       gap: 40px;
       width: 100%;
-      max-width: 1100px;
+      max-width: 1350px;
       min-width: 950px;
-      min-height: 1100px;
+      min-height: 1200px;
       align-items: flex-start;
       margin: 0 auto;
+      /* Tambah tinggi agar naik ke atas sesuai permintaan */
     }
     
     /* Cards Section */
