--- a/index.html
+++ b/index.html
@@ -332,31 +332,96 @@
       }
     }
     @media (max-width: 600px) {
+      body {
+        overflow-x: hidden;
+      }
       .main-area {
-        width: 99vw;
-        padding: 2vw 0 3vw 0;
-      }
-      .card-grid {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        gap: 5vw;
-        max-width: 99vw;
-      }
-      .card-outer {
-        width: 21vw;
-        height: 33vw;
-      }
-      .inputgroup, .inputrow, .desc, .msg {
-        max-width: 99vw;
+        margin-left: 0;
+        align-items: flex-start;
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+        min-width: 0;
+        box-sizing: border-box;
       }
       h2 {
-        font-size: 6vw;
+        font-size: 4.2vw;
+        margin-top: 12px;
+        margin-bottom: 10px;
+        text-align: center;
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
       }
-      .spin-btn {
-        max-width: 99vw;
+      .card-grid {
+        width: 100%;
+        max-width: 100%;
+        min-width: 0;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 2vw;
+        box-sizing: border-box;
+      }
+      .card-outer {
+        width: 30vw;
+        height: 44vw;
+        min-width: 60px;
+        min-height: 90px;
+        box-sizing: border-box;
+      }
+      .card {
+        border-radius: 12px;
+      }
+      .inputgroup, .desc, .msg {
+        max-width: 100vw;
+      }
+      .inputrow {
+        flex-direction: row;
+        gap: 8px;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        max-width: 260px;
+        margin: 0 auto 0 auto;
       }
       .inputrow input {
-        max-width: 100%;
+        max-width: 120px;
+        width: 100%;
+        font-size: 13px;
+        padding: 7px 10px;
+        box-sizing: border-box;
+        border-radius: 7px;
+      }
+      h2 {
+        font-size: 4.2vw;
+        margin-top: 12px;
+        margin-bottom: 10px;
+        text-align: center;
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+      }
+      .spin-btn {
+        max-width: 220px;
+        width: 100%;
+        font-size: 14px;
+        padding: 8px 0;
+        margin: 8px auto 0 auto;
+        box-sizing: border-box;
+        border-radius: 8px;
+      }
+      #btnClaim {
+        max-width: 220px;
+        width: 100%;
+        font-size: 14px;
+        padding: 8px 0;
+        margin: 12px auto 0 auto;
+        box-sizing: border-box;
+        border-radius: 8px;
+      }
+      .desc, .msg {
+        font-size: 13px;
+        margin-top: 8px;
       }
     }
   </style>
