--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
     <button id="btnClaim">CLAIM SEKARANG</button>
   </div>
   <div id="loadingOverlay">Mengacak kartu...</div>
-  <audio id="spinSound" src="https://files.catbox.moe/mnuhkf.wav" preload="auto"></audio>
+  <audio id="spinSound" src="https://files.catbox.moe/vpc2jv.wav" preload="auto"></audio>
   <audio id="zonkSound" src="https://files.catbox.moe/d6lzvw.wav" preload="auto"></audio>
   <script src="script.js"></script>
 </body>
