--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+  <meta name="google-site-verification" content="JqtPYF0Ej11fHBTtRaEZ2GN63auDeXUH94afNyD3EZs" />
   <base target="_top">
   <meta charset="UTF-8">
   <title>MYSTERY CARD SPIN</title>
